<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/colourRadioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/redRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioClick"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/greenRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioClick"
            android:text="@string/green" />

        <RadioButton
            android:id="@+id/blueRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioClick"
            android:text="@string/blue" />
    </RadioGroup>

    <Spinner
        android:id="@+id/colourSpinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colourRadioButtonGroup"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/myName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colourSpinner" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/reset_all_to_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>